--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,19 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_favorites"
+        android:id="@+id/search_name"
         android:enabled="true"
         android:icon="@drawable/ic_search"
         android:title="@string/text_search"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_schedules"
+        android:id="@+id/search_location"
         android:enabled="true"
         android:icon="@drawable/ic_location_searching"
         android:title="@string/text_location"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_music"
+        android:id="@+id/search_filter"
         android:enabled="true"
         android:icon="@drawable/ic_location_searching"
         android:title="@string/text_filter"
