Implement view model for search hotel name screen

--- a/app/src/main/res/layout/fragment_search_hotel_name.xml
+++ b/app/src/main/res/layout/fragment_search_hotel_name.xml
@@ -8,7 +8,7 @@
         <import type="android.view.View"/>
         <variable
             name="model"
-            type="com.example.knifestart.hotelsnights.searchpostbyname.SearchHotelNameViewModel"/>
+            type="com.example.knifestart.hotelsnights.searchhotelbyname.SearchHotelNameViewModel"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
