--- a/app/src/main/res/layout/fragment_search_hotel_name.xml
+++ b/app/src/main/res/layout/fragment_search_hotel_name.xml
@@ -28,5 +28,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="@{model.progressVisible ? View.VISIBLE : View.GONE}"
+            android:background="#EEEEEE"
+            android:alpha=".5">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity = "center"/>
+        </FrameLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
